#2 fix issues after merge